# OAuth2_Playground

./: .gitignore  .gitmodules  README.md
OpenSSL/: openSSL.cmake
OpenSSL/include/openssl/: configuration.h  opensslv.h
OpenSSL/lib/: libcrypto.lib  libssl.lib
src/: CMakeLists.txt  ProxyConfig.h  gtest.cmake  main.cpp  unit_tests.cpp
